# mas-665-hw2

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  assignment_notes.md  pyproject.toml  requirements.txt
src/twin_crew/: config.py  crew.py  custom_chat.py  main.py  named_agent.py
src/twin_crew/agent/: named_agent.py  persona_crew.py  sarcastic_crew.py
src/twin_crew/config/: agents.yaml  tasks.yaml
src/twin_crew/tools/: word_counter_tool.py
